# bardic-chord

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release-plz.yml  release.yml  tag-release.yml
desktop/: Cargo.toml  README.md
desktop/icons/: icon.icns
desktop/src/: backend.rs  lib.rs  main.rs
desktop/ui/: app.slint
xtask/: Cargo.toml
xtask/src/: main.rs
