[package]
name = "bardic-chord"
version = "0.2.1"
description = "A mythical native desktop console for routing local desktop audio into Discord voice."
authors = ["ICEFIR"]
edition = "2021"
license = "MIT"
repository = "https://github.com/ICEFIR/bardic-chord"
homepage = "https://github.com/ICEFIR/bardic-chord"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bardic_chord_lib"
crate-type = ["rlib"]

[build-dependencies]
slint-build = "1.16.0"

[dependencies]
slint = "1.16.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
directories = "6.0.0"
open = "5.3.5"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
tokio = { version = "1.52.3", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
serenity = { version = "0.12.5", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend"] }
songbird = { version = "0.6.0", default-features = false, features = ["driver", "gateway", "rustls", "serenity", "tungstenite"] }
byteorder = "1.5.0"
base64 = "0.22.1"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["fmt"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std"] }
symphonia = { version = "0.5.5", default-features = false, features = ["pcm"] }

[target.'cfg(windows)'.dependencies]
wasapi = "0.23.0"
windows = { version = "0.62.2", features = ["Win32_Devices_FunctionDiscovery", "Win32_Foundation", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Shell_PropertiesSystem"] }
